This commit fixes spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -22,10 +22,10 @@ nav li a {
   background-color: #d89fb0;
   border-radius: 4px;
   border-color: #b64c6e;
-  border-width: 2px;
+  border-width: 1px;
   color: #d89fb0;
   display: inline-block;
-  padding: .4em .75em .4em;
+  padding: .4em .75em;
   text-decoration: none;
 }
 
@@ -42,8 +42,7 @@ nav li a {
 
 footer {
   border-top: 1px solid #e2e2e2;
-  padding: .75em 0;
-  color: #c2c2c2;
+  color: #474747;
 }
 
 @media only screen and (min-width: 60em) {
